<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/editext_style">

    <Button
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/pick_email"
        android:textColorHint="@color/colorPrimaryDark"
        android:id="@+id/address_et"
        android:gravity="center"
        android:layout_margin="5dp"
        android:padding="2dp"
        android:background="@drawable/reg_btn_style"
        android:clickable="true"
        android:textColor="@color/colorPrimary"

        />

    <EditText
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/subject_et"
        android:hint="@string/enter_subject"
        android:gravity="center"
        android:layout_margin="5dp"
        android:padding="2dp"
        android:background="@drawable/reg_btn_style"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="top|start"
        android:id="@+id/body_et"
        android:hint="@string/add_text_to_send"
        android:layout_margin="15dp"
        android:padding="2dp"
        android:background="@drawable/reg_btn_style"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        />

    <Button
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:text="@string/done"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/reg_btn_style"
        android:id="@+id/done_btn"
        android:layout_margin="10dp"
        android:padding="2dp"
        android:textColor="@color/colorPrimary"
         />

</LinearLayout>